2018-10-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager/list_element_impl.C: Make sure inner list
	container's borders are always drawn in the full height of the list.

0.9.0

2018-10-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* API for implementing Cut/Copy/Paste menu options.

	* menu/menu.C: Implement on_popup_state_update().

0.8.0

2018-10-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Added the item layout manager.
0.7.1

2018-09-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Table layout manager, derived from the list layout manager.

2018-09-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* Support updates of button's contents. button's get_layoutmanager()
	returns a suitable singletonlayoutmanager, for that purpose.

	* resort_items() of a selection list.

2018-08-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* list.C: no_selection_type list option.

2018-08-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Multi-column selection lists have optional column borders
	separating them.

2018-08-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Variable height selection lists. new_listlayoutmanager.height().

0.7
2018-08-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement XDND protocol, version 5.
0.6

2018-07-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement a custom font rendering API.
0.5

2018-05-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* Font and color picker display elements.

2018-05-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* combobox/editable_comboboxlayoutmanager_impl.C: Size the input
	field large enough to display the cursor after the largest item
	without scrolling.

	* fonts: bug fixes, improve error reporting.

	* includes/x/w/stop_message.H (stop_message_config): add widthmm
	to have the message automatically wrap. Use this to improve appearance
	of caught exceptions.

	* includes/x/w/custom_comboboxlayoutmanager.H: add synchronized_columns,