@@ -3,6 +3,9 @@
 	* listlayoutmanager/list_element_impl.C: Make sure inner list
 	container's borders are always drawn in the full height of the list.
 
+	* panelayoutmanager/panelayoutmanager_impl.H: Fix pane container's
+	metrics.
+
 0.9.0
 
 2018-10-22  Sam Varshavchik  <mrsam@courier-mta.com>
